--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Сайт-Семантик</title>
+  <title>Brow-Mary</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -69,7 +69,6 @@
     <div class="about-container">
 
       <div class="about-box">
-        <img src="img/mary.jpg" alt="master">
         <p>
           Привет! Меня зовут Мария — сертифицированный мастер-бровист с 3-летним опытом. 
           Делаю естественные, аккуратные брови без боли и лишнего стресса. 
